--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Hello world</h1>
+    <script>
+        function hello(text) {
+            console.log(text)
+        }
+
+        let consoleText = "Lorem ipsum sit amet";
+
+        hello(consoleText);
+
+        setTimeout(hello(consoleText), 5000)
+    </script>
 </body>
+
 </html>
